vlib/v/checker/tests/if_expr_mismatch.vv
fn main() {
	s := if true { '12' } else { 12 }
	println(s)
}
